SERVER-79914 CollectionRoutingInfoTargeter::targetInsert can incorrectly route a document missing _id

GitOrigin-RevId: 096f7f80ba889d2f64736fc53a48d6ecb6d1c73d